# Online-Book-Reader

./: CMakeLists.txt  README.md  ToDo.md  main.cpp
HeaderFiles/: Book.h  BookManager.h  OnlineReader.h  User.h  UserManager.h  UtilitieFunctions.h
SourceFiles/: Book.cpp  BookManager.cpp  OnlineReader.cpp  User.cpp  UserManager.cpp  UtilitieFunctions.cpp
